alignment fixed

--- a/src/ProductCarousel/Carousel.css
+++ b/src/ProductCarousel/Carousel.css
@@ -61,7 +61,6 @@
   align-items: center;
   max-width: 100%;
   padding-bottom: 20px;
-  padding-inline: 20px;
 }
 
 @media only screen and (max-width: 867px) {
